--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
     <name>Load Statistic</name>
     <description>Logs load statistics to a file</description>
     <author>Jive Software</author>
-    <version>${project.version}</version>
-    <date>tbc.</date>
+    <version>1.2.0</version>
+    <date>9/13/2013</date>
     <minServerVersion>3.9.0</minServerVersion>
 </plugin>
