OF-546: Move Maven POM files into source directory.
I continue to be thoroughly confused by having two directories per plugin, one for the plugin sources, and one for the maven build. This commit merges both directories.

As a side effect, various plugin unit tests are now executed by default. Some failed, for which I applied fixes.

This commit also adds some plugins to the Maven structure that previously were not.

--- a/src/plugins/loadStats/pom.xml
+++ b/src/plugins/loadStats/pom.xml
@@ -11,7 +11,7 @@
     <name>LoadStats Plugin</name>
 
     <build>
-        <sourceDirectory>../../src/plugins/loadStats/src/java</sourceDirectory>
+        <sourceDirectory>src/java</sourceDirectory>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
